# ActivityPipeline

./: CMakeLists.txt
TA_ActivityPipeline/: CMakeLists.txt
TA_ActivityPipeline/Src/: ITA_Connection.h
TA_ActivityPipeline/Src/Components/: TA_ActivityQueue.h  TA_BasicActivity.h  TA_BasicPipeline.cpp  TA_BasicPipeline.h  TA_CommonTools.h  TA_Connection.h  TA_ConnectionUtils.cpp  TA_ConnectionUtils.h  TA_MacroDefine.h  TA_ManualStepsChainPipeline.cpp  TA_ParallelPipeline.cpp  TA_ParallelPipeline.h  TA_PipelineHolder.h  TA_ThreadPool.h  TA_Variant.h
TA_ActivityPipeline/Src/Cu/: TestCuda.cu  TestCuda.h
Test/: CMakeLists.txt
Test/PipelineTest/: MetaTest.h  TA_AutoChainPipelineTest.cpp  TA_BasePipelineTest.cpp  TA_CommonToolsTest.cpp  TA_ConnectionTest.cpp  TA_ManualChainPipelineTest.cpp  TA_ManualKeyActivityChainPipelineTest.cpp  TA_ManualStepsChainPipelineTest.cpp  TA_ParallelPipelineTest.cpp  TA_ThreadPoolTest.cpp  TA_ThreadPoolTest.h  main.cpp
